# tutorial-cmake

./: CMakeLists.txt  README.md
cmake/: DebugVariables.cmake
core/: CMakeLists.txt  launcher.cpp  main.cpp
modules/: CMakeLists.txt
modules/module1/: CMakeLists.txt
modules/module1/src/: module1.cpp  module1.h
